--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
