--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.0-beta.10"
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "next-themes": "^0.2.0"
   },
   "keywords": [],
   "author": "",
